--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 
 .contact-info {
   font-size: 16px;
-  background-color: #3673b5c0;
+  background-color: #3673b5;
   display: flex;
   position: fixed;
   align-items: center;
@@ -132,7 +132,8 @@ header {
   right: 0;  /* Ensure it spans the full width */
   z-index: 1000;  /* Keep it on top of other elements */
   width: 100%;  /* Ensure it takes up the full width of the page */
-  margin-top: 30px; /* Adjust the value to control the space */
+  margin-top:  32px; /* Adjust the value to control the space */
+  height: 97px;
   
 }
 
@@ -156,7 +157,7 @@ html, body {
   font-size: 22px;
   line-height: 1.8;
   color: black;
-  font-weight: 700;
+  font-weight:300;
 
   
 
@@ -168,10 +169,10 @@ html, body {
 header .navbar a {
   color: black;
   text-decoration: none;
-  font-size: 28px;
+  font-size: 24px;
   padding: 8px 16px;
   text-transform: capitalize;
-  font-weight: bold;
+ 
   display: inline-block;
 }
 
@@ -252,7 +253,7 @@ header .navbar a:hover {
   padding: 0 20px;
   text-align: center;
   overflow: hidden;
-  margin-top: 162px; /* Adjust this value based on your header height */
+  margin-top: 130px;
  
 }
 
@@ -400,7 +401,7 @@ header .navbar a:hover {
   justify-content: center;
   align-items: center; /* Vertically center content */
   position: relative;
-  margin-top: 0; /* Removed unnecessary margin-top */
+  margin-top: -80px;
   margin-bottom: 0;
 }
 
@@ -409,8 +410,9 @@ header .navbar a:hover {
   color:#0073e6;
   position: relative;
   top: 20px; /* Adjust as needed */
-  font-family: "Londrina Solid", serif;
-  font-weight: 400;
+  font-weight: bold;
+ 
+  font-weight: 500;
   font-style: normal;
 }
 
